# agent_demos

./: .gitignore
chat/: README.md
invest/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  META.md  OPTIMIZATION_ROADMAP.md  README.md  base.md  diagnose_system.py  main.py  prd.json  prd_quant_evolution.json  pyproject.toml  quickstart.md  requirements.txt  test_pipeline_smoke.py
invest/cache/: all_sources_1773673200.json
invest/config/: default.yaml
invest/memory/: generation-log.md  meta-mistakes.md  progress.md
invest/meta/: harness-generator.md  orchestrator.md
invest/output/: daily_2026-04-22.md  daily_2026-04-23.md  daily_2026-05-21.md  daily_summary_2026-05-21.json  trade_report_2026-05-21.json  trade_signals_2026-05-21.json  weekly_2026-W16.md
invest/scripts/: fix_json_quotes.py  validate_prd_evolution.py  validate_quant_prd.py
invest/tests/: conftest.py  test_ashare_backtest.py  test_ashare_strategies.py  test_auto_trading.py  test_benchmark.py  test_capital_flow.py  test_circuit_breaker.py  test_cost_model.py  test_daily_report.py  test_data_validator.py  test_entry_exit.py  test_fundamental.py  test_health_monitor.py  test_improvements.py  test_limit_price.py  test_multi_strategy.py  test_notification_push.py  test_qmt_broker.py  test_reconciler.py  test_scorer.py  test_screener.py  test_sentiment_research.py  test_state_manager.py  test_strategy_optimizer.py  test_system.py  test_t1_rule.py  test_tracker.py  test_trading_session.py  test_walk_forward.py
invest/tmp_test_output/: daily_2026-04-22.md  daily_2026-04-23.md
(+154 files in other folders)
